force-app/main/default/objects/Workato_Integrations_Tracking__c/Workato_Integrations_Tracking__c.object-meta.xml
<CustomObject>
    <description>Workato to populate error and success transactions in YODA to easily track daily progress and track &amp; fix errors.</description>
    <label>Workato Integrations Tracking</label>
    <nameField>
        <label>Workato Integrations Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workato Integrations Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>