force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>