force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>TextArea</type>
</CustomField>