force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/Source_Data_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Data_ID__c</fullName>
    <label>Source Data ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>