force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/Source_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_System_ID__c</fullName>
    <label>Source System ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>