force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/Source_Table_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Table_Object__c</fullName>
    <label>Source Table/Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>