force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>