force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/Success_Operation__c.field-meta.xml
<CustomField>
    <fullName>Success_Operation__c</fullName>
    <label>Success Operation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>