force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/YODA_Object__c.field-meta.xml
<CustomField>
    <fullName>YODA_Object__c</fullName>
    <label>YODA Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>