force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/YODA_Record__c.field-meta.xml
<CustomField>
    <fullName>YODA_Record__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ YODA_Record_ID__c, &quot;YODA Record&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YODA Record</label>
    <type>Text</type>
</CustomField>