force-app/main/default/objects/Workato_Integrations_Tracking__c/fields/YODA_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>YODA_Record_ID__c</fullName>
    <label>YODA Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>