force-app/main/default/objects/Workato_Integrations_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>YODA_Object__c</columns>
    <columns>YODA_Record_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Success_Operation__c</columns>
    <columns>Source_Data_ID__c</columns>
    <columns>Source_System__c</columns>
    <columns>Source_Table_Object__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>