force-app/main/default/objects/Workato_Integrations_Tracking__c/listViews/Asset.listView-meta.xml
<ListView>
    <fullName>Asset</fullName>
    <columns>NAME</columns>
    <columns>YODA_Record_ID__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>YODA_Object__c</field>
        <operation>equals</operation>
        <value>Asset</value>
    </filters>
    <label>Asset</label>
    <language>en_US</language>
</ListView>